[gd_scene load_steps=6 format=3 uid="uid://dmx2fwumi1ey"]

[ext_resource type="Script" uid="uid://b4243wf3yx74g" path="res://combat/arena/arena.gd" id="1_i5doo"]
[ext_resource type="PackedScene" uid="uid://5d2tgixtskiy" path="res://combat/hero_line/hero_line.tscn" id="2_13g3s"]
[ext_resource type="Script" uid="uid://d37m7keo2x8vg" path="res://combat/arena/enemy_manager.gd" id="3_sg87e"]
[ext_resource type="Script" uid="uid://cq5o6kamx720a" path="res://combat/hero_array.gd" id="4_1qt8t"]
[ext_resource type="Resource" uid="uid://xnusq6emvqbh" path="res://combat/enemy_arrays/round_1_enemies/team_1.tres" id="5_kxugw"]

[node name="Arena" type="Node2D"]
script = ExtResource("1_i5doo")

[node name="FriendlyHeroLine" parent="." instance=ExtResource("2_13g3s")]
unique_name_in_owner = true
position = Vector2(840, 600)

[node name="EnemyHeroLine" parent="." instance=ExtResource("2_13g3s")]
unique_name_in_owner = true
position = Vector2(1080, 600)
friendly = false

[node name="EnemyManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_sg87e")
round_1_list = Array[ExtResource("4_1qt8t")]([ExtResource("5_kxugw")])
